# scalegraph-elixir

./: .gitignore  ARCHITECTURE.md  CONVENTIONS.md  DEMO.md  Justfile  LLM.md  PROJECT.md  README.md  SERVICES-PROPOSAL.md  TASKS.md  mix.exs
cli/: CLI-USER-GUIDE.md  Cargo.toml  IMPROVEMENTS.md  build.rs
cli/proto/: ledger.proto
cli/src/: main.rs
cli/src/grpc/: mod.rs
cli/src/ui/: app.rs  mod.rs  views.rs
config/: config.exs
docs/: ARCHITECTURE_SEPARATION.md  BUSINESS_TRANSACTIONS.md  CONTRACT_YAML_GUIDE.md  ELIXIR_SERVER_UPDATE.md  GENERIC_CONTRACTS.md  GIT_WORKFLOW.md  LEDGER_DESIGN.md  MCP.md  PROTO_SPLIT_EXAMPLE.md  PROTO_SPLIT_MIGRATION.md  PROTO_SPLIT_RECOMMENDATION.md  PROTO_SYNC.md  SMART_CONTRACT_EXAMPLES.md  STRESS-TEST-RESULTS.md  SUPPLIER_REGISTRATION_CONTRACT.md
examples/contracts/: README.md  conditional_payment.yaml  ecosystem_partner_membership.yaml  invoice_auto_payment.yaml  loan_with_repayment.yaml  monthly_subscription.yaml  revenue_share.yaml  simple_transfer.yaml  supplier_registration.yaml
lib/: scalegraph.ex
lib/mix/tasks/: protobuf.compile.ex  scalegraph.contract.load.ex  (+1 more)
lib/scalegraph/: application.ex  seed.ex
mcp/: Cargo.toml  README.md  build.rs
mcp/proto/: ledger.proto
mcp/src/: main.rs
priv/: SEED_DATA_CHECKLIST.md  seed_data.yaml
priv/protos/: ledger.proto
proto/: README.md  business-rules.proto  common.proto  ledger.proto  smart-contracts.proto
scripts/: check_contracts.exs  marketplace_membership_example.exs  stress_test.exs  supplier_registration_example.exs
test/scalegraph/: stress_test.exs
(+27 files in other folders)
