[package]
name = "scalegraph-cli"
version = "0.1.0"
edition = "2021"
description = "TUI CLI for Scalegraph Ledger"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI args
clap = { version = "4", features = ["derive"] }

# Utilities
unicode-width = "0.1"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "scalegraph"
path = "src/main.rs"
