[package]
name = "scalegraph-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP Server for Scalegraph Ledger - enables Claude Desktop to interact with the ledger API"

[[bin]]
name = "scalegraph-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.12"
